Fix weird rendering on mobile

--- a/react-frontend/src/css/index.css
+++ b/react-frontend/src/css/index.css
@@ -5,4 +5,5 @@ html, body{
     padding: 0;
     font-family: "Montserrat";
     background: #f6f5f7;
+    -webkit-appearance: none;
 }
